--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -1,7 +1,8 @@
 <html>
 	<head>
 		<title>Todo List</title>
-		<script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="/assets/todo-list.js"></script>
 		<link href="/assets/styles.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body>
@@ -13,9 +14,9 @@
 			</form>
 		</div>
 		<ul>
-			<li>Item 1</li>
-			<li>Item 2</li>
-			<li>Item 3</li>
+			<% for (var i=0; i<todos.length; i++) { %>
+				<li><%= todos[i].item %></li>
+			<% } %>
 		</ul>
 	</body>
 </html>
